--- a/source/downloads/notebooks/SudokuCodeGolf.ipynb
+++ b/source/downloads/notebooks/SudokuCodeGolf.ipynb
@@ -90,7 +90,7 @@
       "of numbers, with some spaces left blank.\n",
       "The grid must be filled so that each row, column,\n",
       "and 3x3 box contains the numbers 1-9.  It's a generalization of the\n",
-      "*Latin Squares* first studied by Leonard Euler nearly 400 years ago.\n",
+      "*Latin Squares* first studied by Leonhard Euler nearly 300 years ago.\n",
       "\n",
       "The reason I chose to use Sudoku here is simple: not only is today\n",
       "Euler's birthday, but Sudoku is how I first learned Python.\n",
@@ -178,9 +178,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "It's rather unenlightening in itself, so below I'll explain the process\n",
-      "I went through to arrive at it, in hopes that you can learn from my\n",
-      "own thought process.  Though this is the best solution I was able to come\n",
+      "It's rather unenlightening in itself, so below I'll explain the steps\n",
+      "I took to arrive at it, in hopes that you can learn from my\n",
+      "thought process.  Though this is the best solution I was able to come\n",
       "up with, I don't know whether or not a better one might be out there.\n",
       "If you can beat it, please post your solution in the blog comment thread!\n",
       "\n",
@@ -219,7 +219,7 @@
       "not for the moment worrying about brevity.\n",
       "\n",
       "In the case of Sudoku, there are many rules and rubriks that can be used\n",
-      "to create an efficient solver (read about some of them [here]()).\n",
+      "to create an efficient solver (read about some of them [here](http://www.sudokuoftheday.com/pages/techniques-overview.php)).\n",
       "Using these, it is possible to solve most (all?) Sudoku puzzles without\n",
       "resorting to guess-and-check approaches.  To implement this strategy,\n",
       "one approach might be to enumerate the sets of possible values\n",
@@ -472,9 +472,9 @@
       "    (A or B)\n",
       "\n",
       "you might expect the result to be either ``True`` or ``False``.  Instead, Python\n",
-      "does something a bit clever.  If the result is True, it returns ``A`` (which,\n",
-      "naturally, evaluates to ``True``).  If the result is False, it returns ``A`` if\n",
-      "``A`` evaluates to ``False``, and ``B`` otherwise.  We can use this fact to\n",
+      "does something a bit clever.  If the result is False, it returns ``A`` (which,\n",
+      "naturally, evaluates to ``False``).  If the result is True, it returns ``A`` if\n",
+      "``A`` evaluates to ``True``, and ``B`` otherwise.  We can use this fact to\n",
       "remove the ``if`` statement completely from the set comprehension.  We'll end\n",
       "up with some extra values within the second set, but the set difference conveniently\n",
       "removes these."
